# Asterion

./: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml  start_asterion.sh
agents/: __init__.py
asterion_core/: __init__.py  live_side_effect_guard_v1.py
config/: chain_registry.polygon.json  controlled_live_smoke.json  wallet_registry.json  weather_station_smoke_catalog.json
dagster_asterion/: __init__.py  handlers.py  job_map.py  jobs.py  resources.py  schedules.py
domains/: __init__.py
scripts/: refresh_operator_console_surfaces.py  run_real_weather_chain_loop.py  run_real_weather_chain_smoke.py
tests/: README.md  __init__.py  test_agents_runtime.py  test_allocation_preview_persistence.py  test_allocator_rerank_surface_consistency.py  test_allocator_scaling_discipline_acceptance.py  test_allocator_v1.py  test_allocator_v1_p10_scheduling.py  test_allocator_v1_phase6.py  test_allocator_v2_rerank.py  test_analysis_doc_banner_policy.py  test_cache_ttl.py  test_calibration_freshness_penalty.py  test_calibration_gate_default_clear.py  test_calibration_gate_fallback_surfaces.py  test_calibration_hard_gate_acceptance.py  test_calibration_impacted_market_summary.py  test_calibration_materialization_status.py  test_calibration_ops_ui_surfaces.py  test_calibration_profile_v2.py  test_capability_refresh.py  test_capital_aware_ranking_acceptance.py  test_chain_tx_scaffold.py  test_cohort_prior_backfill.py  test_cold_path_orchestration.py  test_controlled_live_capability_manifest.py  test_controlled_live_smoke.py  test_deep_audit_plan_docs.py  (+128 more)
ui/: app.py  (+7 more)
(+332 files in other folders)
