[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "asterion"
version = "0.1.0"
description = "Asterion event trading platform foundation"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "duckdb>=1.1",
  "httpx>=0.27",
  "web3>=7.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]
orchestration = [
  "dagster>=1.9",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["agents*", "asterion_core*", "domains*", "dagster_asterion*"]
